explicitly set Java 7 execution environment and replaced usage of sun-internal classes