@@ -58,6 +58,7 @@ import java.util.Set;
 
 import javax.xml.parsers.ParserConfigurationException;
 
+import org.apache.commons.codec.binary.Base64;
 import org.knime.core.data.DataCell;
 import org.knime.core.data.DataType;
 import org.knime.core.data.RowKey;
@@ -87,9 +88,6 @@ import org.knime.core.node.config.base.AbstractConfigEntry;
 import org.knime.core.node.config.base.ConfigBase;
 import org.knime.core.node.config.base.XMLConfig;
 import org.xml.sax.SAXException;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * Supports a mechanism to save settings by their type and a key. Furthermore,
@@ -977,7 +975,7 @@ public abstract class Config extends ConfigBase
         ObjectOutputStream oos = new ObjectOutputStream(baos);
         oos.writeObject(o);
         oos.close();
-        return new BASE64Encoder().encode(baos.toByteArray());
+        return Base64.encodeBase64String(baos.toByteArray());
     }
 
     /**
@@ -992,7 +990,7 @@ public abstract class Config extends ConfigBase
     private static final Object readObject(final String className,
             final String serString)
             throws IOException, ClassNotFoundException {
-        byte[] bytes = new BASE64Decoder().decodeBuffer(serString);
+        byte[] bytes = Base64.decodeBase64(serString);
         ByteArrayInputStream bais = new ByteArrayInputStream(bytes);
         GlobalObjectInputStream ois;
         if (className == null) {
@@ -1013,7 +1011,9 @@ public abstract class Config extends ConfigBase
                 }
             };
         }
-        return ois.readObject();
+        Object o = ois.readObject();
+        ois.close();
+        return o;
     }
 
 }
